--- a/Portfolio/package.json
+++ b/Portfolio/package.json
@@ -18,11 +18,11 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "parcel-bundler": "^1.6.1",
     "rxjs": "~7.5.0",
     "swiper": "^8.4.4",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
-    "parcel-bundler": "^1.6.1"
+    "zone.js": "^0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.3",
