--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
-    "parcel-bundler": "^1.6.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "ng-circle-progress": "^1.6.0",
+    "parcel-bundler": "^1.2.0",
     "rxjs": "~7.5.0",
     "swiper": "^8.4.4",
     "tslib": "^2.3.0",
